<resources>
    <string name="About">About</string>
    <string name="AccessDenied">Access denied</string>
    <string name="Account">Account</string>
    <string name="AccountAlreadyPremiumDesc">Your subscription is still on your Google Play Account. You can register another account to take it back.</string>
    <string name="AccountCreateTips">Create a X-VPN Account</string>
    <string name="AccountDeleted">Account Deleted</string>
    <string name="AccountDeviceLimitReachedError">Device limit reached, you have to change the password to continue the login.</string>
    <string name="AccountEmailHint">Your Email</string>
    <string name="AccountError">Account error</string>
    <string name="AccountErrorInputEmail">Please enter your email.</string>
    <string name="AccountErrorInputNewPassword">Please enter your new password.</string>
    <string name="AccountErrorInputPassword">Please enter your password.</string>
    <string name="AccountErrorInputVerificationCode">Please enter the verification code.</string>
    <string name="AccountErrorPasswordAgainNotMatch">The passwords you typed do not match.</string>
    <string name="AccountErrorPasswordMinLen">Password must contain at least 8 characters.</string>
    <string name="AccountErrorPasswordOverflow">Use 72 characters or fewer for your password</string>
    <string name="AccountErrorSamePassword">Please enter different password.</string>
    <string name="AccountErrorWrongEmailPassword">Wrong email or password.</string>
    <string name="AccountExpiredError">Account error, please sign in again.</string>
    <string name="AccountForgot">Forgot?</string>
    <string name="AccountFree">Free account</string>
    <string name="AccountHoldRecovered">Your form of payment was updated, and your subscription has been recovered.</string>
    <string name="AccountInformation">Account Information</string>
    <string name="AccountMangeLinkdDevice">You can manage devices linked to this account on X-VPN official website.</string>
    <string name="AccountPasswordHint">Password</string>
    <string name="AccountPurchaseGuideDesc">You will get topnotch streaming experience and decent download speed on your Computers, Tablets &amp; Phones.</string>
    <string name="AccountPurchaseGuideTitle">With the price of coffee every month</string>
    <string name="AccountPurchaseHoldPrompt">There is a problem with your subscription. Click here to go to the Google Play subscription settings to fix your payment method.</string>
    <string name="AccountPurchaseHoldPromptHighlight">Click here</string>
    <string name="AccountPurchasePausePrompt">Your subscription is paused. Click here to go to the Google Play subscription settings.</string>
    <string name="AccountPurchaseRecoveredPrompt">Payment status updated, and your subscription has been recovered.</string>
    <string name="AccountRememberTips">Remember your password?</string>
    <string name="AccountSignInTips">Already have an account</string>
    <string name="AccountSoleDevicePassInvalid">Incorrect password. You may contact the one who give you this account.</string>
    <string name="AccountUndefine">Sign In / Sign Up</string>
    <string name="AccountVIPFull">Premium for all devices</string>
    <string name="AccountVIPMobile">Premium for mobile</string>
    <string name="AccountVIPStreaming">Premium for Streaming</string>
    <string name="AccountVerificationCodeHint">Verification Code</string>
    <string name="AdSettingsShowFailed">Please check your network and try again.</string>
    <string name="AddDomainTipsContent1">1. Please make sure you are using the network which X-VPN failed to connect</string>
    <string name="AddDomainTipsContent2">2. Visit websites which you can visit</string>
    <string name="AddDomainTipsContent3">3. Copy the website link and paste it here</string>
    <string name="AddDomainTipsTitle">Add web domain will improve the connection rate</string>
    <string name="AddQuickSettingTile">Quick Settings Tile</string>
    <string name="AddQuickSettingTileDetails">Add X-VPN tiles to your Quick Settings panel for quick connection.</string>
    <string name="AddShortcutDetails">Place the 1*1 widget on the desktop for quick connection.</string>
    <string name="AddShortcutTitle">Simple Widget</string>
    <string name="AddWidget5x2Details">Place the 5*2 widget on the desktop for quick connection and connection status overview.</string>
    <string name="AddWidget5x2Title">Advanced Widget</string>
    <string name="AdsSettings">Personalized Ads Settings</string>
    <string name="AdvancedConfig">Advanced Config</string>
    <string name="AdvancedConnectionErrorTip">Error detected, try advanced connection with exclusive config!</string>
    <string name="AdvancedFeatures">Advanced Features</string>
    <string name="AdvancedWidgetAdded">Advanced widget added</string>
    <string name="AlertTurnOffStaticIPContent">The connection config is only stored on your device locally, turning it off will delete all connection config history.</string>
    <string name="AlertTurnOffStaticIPTitle">Are you sure you want to turn off the Connection Config?</string>
    <string name="AllApps">All apps</string>
    <string name="AllLocationForVideo">All locations for video</string>
    <string name="AllLocations">All locations</string>
    <string name="AllowNotification">Allow notification</string>
    <string name="AllowNotificationTips">Get notification when we message you through live chat to solve the issue.</string>
    <string name="AppBypassDisconnectConfirm">Please disconnect X-VPN before making change to Split Tunneling.</string>
    <string name="AppBypassListDisconnectConfirm">Please disconnect X-VPN before making change to Split Tunneling.</string>
    <string name="AppConfig">App Config</string>
    <string name="AppSettings">App settings</string>
    <string name="AppUpgradeBtn">Update</string>
    <string name="AppUpgradeDetails">To use this app,download the latest version.</string>
    <string name="AppUpgradeTitle">X-VPN needs an update</string>
    <string name="Apply">Apply</string>
    <string name="ApplySuccess">apply success</string>
    <string name="AppsDoNotUseVPN">Apps Do Not Use VPN</string>
    <string name="AppsUseVPN">Apps Use VPN</string>
    <string name="Auto">Auto</string>
    <string name="BackToHomePage">Back to Home Page</string>
    <string name="BackToMainMenu">Back to main menu</string>
    <string name="BackToSignIn">Back to Sign In</string>
    <string name="Bad">Bad</string>
    <string name="BannerTvSupportServer">Notice: This connection is only effective for X-VPN function, such as login, forgot password and restore purchase.</string>
    <string name="BenefitAdvancedFeatures">Access to all advanced features: Speed test, Kill switch, Static IP and Use on game consoles</string>
    <string name="BenefitFeaturesServers">Access to 8000+ VPN servers</string>
    <string name="BenefitFeaturesServersHighlight">8000+ VPN servers</string>
    <string name="BenefitFeaturesSpeed">Boost up to have ultra-fast connection</string>
    <string name="BenefitFeaturesSpeedHighlight">ultra-fast</string>
    <string name="BenefitMultiDevice">Supports up to 5 devices</string>
    <string name="BenefitNoAds">No ads</string>
    <string name="BindFailedNormalTips">You can click the retry button here or restore purchase on the purchase page</string>
    <string name="BindFailedTitle">Failed to bind subscription</string>
    <string name="BlockPurchaseAreaTips">We are sorry to inform you that X-VPN is not available in your area.</string>
    <string name="BrowserInputHint">Search or type URL</string>
    <string name="BrowserMaxTabsReached">:-( Too many tabs. Close some and retry.</string>
    <string name="BrowserSafeTips">X-VPN is OFF, your browsing is not encrypted or anonymous.</string>
    <string name="BrowsingHistoryErased">Your browsing history has been erased</string>
    <string name="BsvTest">Bsv Test</string>
    <string name="BsvTestRuningExitTips">The test is still running. You may restart X-VPN if you want to stop it</string>
    <string name="CanNotFindLocation">Can’t find the location you need?</string>
    <string name="CanNotFindStreaming">Can\'t find the streaming you are looking for?</string>
    <string name="Cancel">Cancel</string>
    <string name="Change">Change</string>
    <string name="ChangeLocation">Change Location &gt;</string>
    <string name="ChangePassPasswordIncorrect">The password you entered does not match your current one.</string>
    <string name="ChangePassword">Change Password</string>
    <string name="ChangePasswordFailed">Change Password Failed</string>
    <string name="ChangeProtocol">Change Protocol &gt;</string>
    <string name="ChangeYourPassword">Change Your Password</string>
    <string name="ChatBsvNetworkTest">Network Diagnostic Test</string>
    <string name="ChatBsvNetworkTestTips">The test may take few seconds to minutes, please stay on this page till the test is done.</string>
    <string name="ChatClearHistoryTips">Confirm to clear all chat history?</string>
    <string name="ChatNoConnection">No connection, please check your internet.</string>
    <string name="ChatOfflineSubTitle">Sorry that we are taking a rest now. You can leave a message on support@xvpn.io.</string>
    <string name="ChatOnline">We are online now</string>
    <string name="ChatOnlineCountdown">We will be online after %1$s</string>
    <string name="ChatOnlineCountdownVIP">%1$s will be online after %2$s</string>
    <string name="ChatOnlineVIP">%1$s is online now</string>
    <string name="CheckNetworkFailedText1">Endless trial loop caused by systematic error.</string>
    <string name="CheckNetworkFailedText2">Please restart X-VPN to fix.</string>
    <string name="ConnectByLogCheckNetwork">Please check your network</string>
    <string name="ConnectByLogIPExpired">2. The current connection config may expired</string>
    <string name="ConnectByLogNoNetwork">1. Network may be not stable</string>
    <string name="ConnectFailed">Connect Failed</string>
    <string name="ConnectFailedContactUs">If you still can\'t connect, please Contact Support.</string>
    <string name="ConnectFailedContactUsTV">If you still can\'t connect, please Contact support@xvpn.io</string>
    <string name="ContactSupport">Contact Support</string>
    <string name="Continue">Continue</string>
    <string name="DeleteAccountTips">If you have an auto-renewable subscription, your billing will continue through Google even though your account was deleted. Please make sure you have canceled your subscription before account deletion.</string>
    <string name="DeleteAccountTips2">Notice: you can not access all premium servers once the account is deleted.</string>
    <string name="DeleteAccountTips3">For more information about subscription management and refund, please contact us.</string>
    <string name="ErrorCode">Error code</string>
    <string name="FreeBlockDetails">Free servers seem already been blocked and stop working for you. You may try premium servers.</string>
    <string name="FreeblockPremiumServer">Go premium and get access to 8000+ global servers</string>
    <string name="HomePageWidgets">Home Page Widget</string>
    <string name="ManageYourSubscriptions">Manage your subscriptions</string>
    <string name="NotificatorBar">Notification Bar</string>
    <string name="NotificatorBarDetails">Add X-VPN to the notification bar for quick connection.</string>
    <string name="PleaseRetryWithTheFastestServer">Please retry with The Fastest Server</string>
    <string name="PurchasePriceYearly">Then $71.99/year</string>
    <string name="RetryWithTheFastestServer">Retry with The Fastest Server</string>
    <string name="SendEmail">Send Email</string>
    <string name="StartFreeTry">Start your 7-day trial</string>
    <string name="TryAllLocation">Try All Location</string>
</resources>