<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteAccountTips"
        android:lineSpacingExtra="3dp"/>
    <TextView
        android:textColor="#1c83f7"
        android:id="@+id/tvManageSubscription"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ManageYourSubscriptions"
        android:lineSpacingExtra="3dp"
        android:fontFamily="sans-serif-condensed-medium"/>
    <TextView
        android:id="@+id/vNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteAccountTips2"
        android:lineSpacingExtra="3dp"/>
    <TextView
        android:id="@+id/tvDeleteAccountTips3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DeleteAccountTips3"
        android:lineSpacingExtra="3dp"/>
</LinearLayout>
