<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.security.xvpn.z35kb.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/item_setting_notification_bar"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:paddingRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="17sp"
                android:textColor="#253142"
                android:id="@+id/tvNotificationBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NotificatorBar"
                android:lineSpacingExtra="5dp"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:textSize="12sp"
                android:textColor="#253142"
                android:id="@+id/tvNotificationBarDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/NotificatorBarDetails"
                android:lineSpacingExtra="5dp"/>
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBtnNotificationBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:thumb="@drawable/switch_thumb_style"
            app:buttonTint="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_switch_text"
            app:layout_constraintRight_toRightOf="parent"
            app:showText="false"
            app:track="@drawable/switch_track_style"/>
    </LinearLayout>
    <View
        android:background="#e6e6e7"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:id="@+id/tvWidgetTitle"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/HomePageWidgets"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="20dp"/>
    <View
        android:id="@+id/divider_1"
        android:background="@color/white"
        android:layout_width="20dp"
        android:layout_height="1dp"/>
    <com.security.xvpn.z35kb.widget.QuickConnAddItemView
        android:id="@+id/itemAdvanceWidget"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:details="@string/AddWidget5x2Details"
        app:title="@string/AddWidget5x2Title"/>
    <View
        android:id="@+id/divider_2"
        android:background="@color/white"
        android:layout_width="20dp"
        android:layout_height="1dp"/>
    <com.security.xvpn.z35kb.widget.QuickConnAddItemView
        android:id="@+id/itemSimpleWidget"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:details="@string/AddShortcutDetails"
        app:title="@string/AddShortcutTitle"/>
    <View
        android:id="@+id/divider_3"
        android:background="@color/white"
        android:layout_width="20dp"
        android:layout_height="1dp"/>
    <com.security.xvpn.z35kb.widget.QuickConnAddItemView
        android:id="@+id/itemQuickSettingsTile"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:details="@string/AddQuickSettingTileDetails"
        app:largeTitle="true"
        app:title="@string/AddQuickSettingTile"/>
</LinearLayout>
