<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_gravity="right"
        android:id="@+id/btnClose"
        android:src="@drawable/icon_nav_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TopBarIconStyle"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_gravity="center"
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/ConnectFailed"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/NormalText"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#333333"
        android:id="@+id/tv_flag_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/ConnectByLogNoNetwork"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintWidth_max="410dp"/>
    <TextView
        android:textSize="14sp"
        android:textColor="#999"
        android:id="@+id/btnCheckNetwork"
        android:background="@drawable/bg_focus_rectangle"
        android:focusable="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:text="@string/ConnectByLogCheckNetwork"
        android:lineSpacingExtra="4dp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flag_1"
        app:layout_constraintWidth_max="410dp"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#333333"
        android:id="@+id/tv_flag_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/ConnectByLogIPExpired"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckNetwork"
        app:layout_constraintWidth_max="410dp"/>
    <TextView
        android:textSize="14sp"
        android:textColor="#999"
        android:id="@+id/btnChangeLocation"
        android:background="@drawable/bg_focus_rectangle"
        android:focusable="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:text="@string/PleaseRetryWithTheFastestServer"
        android:lineSpacingExtra="4dp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flag_2"
        app:layout_constraintWidth_max="410dp"/>
    <com.security.xvpn.z35kb.widget.XButton
        android:textSize="17sp"
        android:textColor="@color/white"
        android:id="@+id/vAction"
        android:background="@drawable/button_blue"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:foreground="@drawable/round_alpha40p_pressed"
        android:text="@string/RetryWithTheFastestServer"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeLocation"
        app:layout_constraintWidth_max="410dp"/>
    <LinearLayout
        android:id="@+id/vError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vAction"
        app:layout_constraintWidth_max="410dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:src="@drawable/ic_error_advanced_conn"/>
        <TextView
            android:textSize="13sp"
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/AdvancedConnectionErrorTip"/>
    </LinearLayout>
    <TextView
        android:textSize="12sp"
        android:textColor="#ff767676"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_err_code"
        android:background="@drawable/bg_focus_rectangle"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ErrorCode"
        android:fontFamily="sans-serif-medium"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_goneMarginBottom="20dp"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/black_lyw"
        android:id="@+id/contact_support"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ConnectFailedContactUs"
        android:lineSpacingExtra="4.5dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_err_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_max="410dp"
        app:layout_goneMarginBottom="30dp"/>
    <TextView
        android:textSize="16dp"
        android:textColor="@color/black_lyw"
        android:id="@+id/contact_support_tv"
        android:padding="15dp"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ConnectFailedContactUsTV"
        android:lineSpacingExtra="4.5dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_err_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_max="410dp"
        app:layout_goneMarginBottom="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
