<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="13sp"
        android:gravity="left"
        android:id="@+id/tv_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/CanNotFindLocation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textColor="@color/contact_support_text_color"
        android:gravity="center"
        android:id="@+id/tvTryAllLocation"
        android:background="@drawable/bg_contact_support"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="137dp"
        android:text="@string/TryAllLocation"/>
    <TextView
        android:textColor="@color/contact_support_text_color"
        android:gravity="center"
        android:id="@+id/tvContactSupport"
        android:background="@drawable/bg_contact_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="137dp"
        android:text="@string/ContactSupport"/>
    <TextView
        android:textColor="@color/send_email_text_color"
        android:gravity="center"
        android:id="@+id/tvSendEmail"
        android:background="@drawable/bg_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="137dp"
        android:text="@string/SendEmail"/>
    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:constraint_referenced_ids="tvTryAllLocation,tvContactSupport,tvSendEmail"
        app:flow_horizontalAlign="start"
        app:flow_horizontalBias="0"
        app:flow_horizontalGap="20dp"
        app:flow_horizontalStyle="packed"
        app:flow_verticalGap="15dp"
        app:flow_verticalStyle="spread"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tips"/>
</androidx.constraintlayout.widget.ConstraintLayout>
