<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.security.xvpn.z35kb.XTextViewNew
                android:textSize="18sp"
                android:textColor="#333333"
                android:layout_gravity="center"
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ConnectFailed"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/NormalText"/>
            <com.security.xvpn.z35kb.XTextViewNew
                android:textSize="18dp"
                android:textColor="@color/black_lyw"
                android:id="@+id/tv_flag_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:text="@string/FreeBlockDetails"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintWidth_max="410dp"/>
            <com.security.xvpn.z35kb.XTextViewNew
                android:textSize="18dp"
                android:textColor="@color/black_lyw"
                android:id="@+id/tv_flag_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/FreeblockPremiumServer"
                app:layout_constraintLeft_toLeftOf="@+id/tv_flag_1"
                app:layout_constraintRight_toRightOf="@+id/tv_flag_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_flag_1"/>
            <com.security.xvpn.z35kb.XTextViewNew
                android:textSize="18dp"
                android:textColor="@color/black_lyw"
                android:gravity="center"
                android:id="@+id/tv_flag_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/StartFreeTry"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintLeft_toLeftOf="@+id/tv_flag_2"
                app:layout_constraintRight_toRightOf="@+id/tv_flag_2"
                app:layout_constraintTop_toBottomOf="@+id/tv_flag_2"/>
            <TextView
                android:textSize="12dp"
                android:textColor="@color/black_lyw"
                android:id="@+id/tvPurchasePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/PurchasePriceYearly"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintLeft_toLeftOf="@+id/tv_flag_3"
                app:layout_constraintRight_toRightOf="@+id/tv_flag_3"
                app:layout_constraintTop_toBottomOf="@+id/tv_flag_3"
                app:layout_goneMarginTop="50dp"/>
            <com.security.xvpn.z35kb.widget.XButton
                android:textSize="17dp"
                android:textColor="@color/white"
                android:id="@+id/btnSubscribe"
                android:background="@drawable/bg_subscribe_btn_blue"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:text="@string/Continue"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPurchasePrice"
                app:layout_constraintWidth_max="410dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="11sp"
                android:textColor="#999999"
                android:textColorLink="@color/colorAccent"
                android:id="@+id/tvPurchaseRule"
                android:paddingBottom="40dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:lineSpacingExtra="2.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSubscribe"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_gravity="right"
        android:id="@+id/btnClose"
        android:src="@drawable/icon_nav_cancel"
        style="@style/TopBarIconStyle"/>
</FrameLayout>
